@@ -34,3 +34,9 @@ cursor : pointer;
 table.iconspanel td a {
 text-decoration : none;
 }
+
+/**
+For Article
+*/
+input[type='button'], input[type='submit'], input[type='reset'], input[type='file'] {font-family : Verdana, Arial, Helvetica, sans-serif;font-size : 10px;color : #555;background-color : #f1f1f1;height : 20px;border : 1px solid #ccc;margin-top : 2px;}
+#cklowerpanel .tbl2 {font-size : 11px;color : #555;background-color : #f1f1f1;padding : 4px;}
